<resources>
    <string name="app_name">Navegaciones</string>
    <string name="screen_one">Agregar Usuario</string>
    <string name="screen_two">Listar Usuarios</string>
    <string name="nombre">Nombre</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="clientes">Clientes</string>
    <string name="vehiculos">Vehiculos</string>
    <string name="insumos">Insumos</string>
    <string name="ventas">Ventas</string>
    <string name="apellido">Apellido</string>
    <string name="cedula">Cedula</string>
    <string name="Cedula">Cedula</string>
    <string name="Apellido">Apellido</string>
    <string name="ingrese_marca">Ingrese Marca</string>
    <string name="ingrese_color">Ingrese Color</string>
    <string name="ingrese_placa">Ingrese Placa</string>
    <string name="ingrese_modelo">Ingrese Modelo</string>
    <string name="aceptar">Aceptar</string>
    <string name="listar">Listar</string>
    <string name="registrar">Registrar</string>
</resources>